# competitor_analysis_agents

./: .gitignore  README.md
competitor_analysis/backend/: pyproject.toml
competitor_analysis/backend/app/: main.py  utils.py
competitor_analysis/backend/app/agents/: __init__.py  evaluator.py  scraper.py  summarizer.py
competitor_analysis/backend/app/controllers/: __init__.py  api_controller.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Dashboard.js
